--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,16 @@
 <mat-card>
     <mat-card-title>Login</mat-card-title>
     <mat-card-content>
-        
+            <form action="">
+                <mat-form-field>
+                    <mat-label>Username</mat-label>
+                    <input type="text" required matInput>
+                </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Password</mat-label>
+                    <input type="password" required matInput>
+                </mat-form-field>
+                <button type="submit">Login</button>
+            </form>
     </mat-card-content>
 </mat-card>
