--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
                     <mat-label>Password</mat-label>
                     <input type="password" required matInput>
                 </mat-form-field>
-                <button type="submit">Login</button>
+                <button type="submit" mat-raised-button color="primary">Login</button>
             </form>
     </mat-card-content>
 </mat-card>
