--- a/frontend/src/app/dashboard/dashboard.component.css
+++ b/frontend/src/app/dashboard/dashboard.component.css
@@ -2,8 +2,18 @@ mat-card{
     width: 500px;
     margin: auto;
     margin-top: 2rem;
+    padding: 30px 20px;
 }
 form{
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+mat-form-field{
+    margin: 15px 0;
+    width: 100%;
+}
+button{
+    margin-top: 20px;
+    width: 150px;
 }
