added fields in signup

--- a/frontend/src/app/dashboard/signup/signup.component.html
+++ b/frontend/src/app/dashboard/signup/signup.component.html
@@ -1,1 +1,28 @@
-<p>signup works!</p>
+<mat-card>
+    <mat-card-title>Sign Up</mat-card-title>
+    <mat-card-content>
+            <form action="">
+                <mat-form-field>
+                    <mat-label>Name</mat-label>
+                    <input type="text" required matInput>
+                </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Contact</mat-label>
+                    <input type="number" required matInput>
+                </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Email</mat-label>
+                    <input type="text" required matInput>
+                </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Password</mat-label>
+                    <input type="text" required matInput>
+                </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Confirm Password</mat-label>
+                    <input type="text" required matInput>
+                </mat-form-field>
+                <button type="submit" mat-raised-button color="primary">Sign Up</button>
+            </form>
+    </mat-card-content>
+</mat-card>
