added home routing and added signup link in login

--- a/frontend/src/app/dashboard/login/login.component.css
+++ b/frontend/src/app/dashboard/login/login.component.css
@@ -17,3 +17,9 @@ button{
     margin-top: 20px;
     width: 150px;
 }
+mat-card-footer{
+    padding: 20px;
+}
+mat-card-footer a{
+    text-decoration: none;
+}
