--- a/frontend/src/app/dashboard/login/login.component.html
+++ b/frontend/src/app/dashboard/login/login.component.html
@@ -16,4 +16,7 @@
                 <button type="submit" mat-raised-button color="primary" [disabled]="user.invalid">Login</button>
             </form>
     </mat-card-content>
+    <mat-card-footer>
+        <span>Don't have an account ! <a href="/signup" class="sign-up">Sign Up</a></span>
+    </mat-card-footer>
 </mat-card>
