--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,3 +1,3 @@
-<mat-toolbar color="primary">
-    <span>Shopping Application</span>
+<mat-toolbar>
+    <a href="/"><img src="../../assets/images/logo.png" alt="soulful" class="brand"></a>
 </mat-toolbar>
