--- a/frontend/src/app/home/home.component.css
+++ b/frontend/src/app/home/home.component.css
@@ -1,7 +1,12 @@
+.container{
+    padding: 20px;
+}
+
 mat-card{
     width: 350px;
     box-shadow: 0 5px 30px 5px rgba(0, 0, 0, 0.3) !important; 
     text-align: center;
+    margin: auto;
 }
 mat-card-title{
     margin: 15px 0;
