--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,17 +1,17 @@
 <div class="container">
     We found perfect profile for you
 
-    <mat-card>
-        <mat-card-title>Sneha Shinde</mat-card-title>
+    <mat-card >
+        <mat-card-title>{{profile?.name}}</mat-card-title>
         <mat-card-content>
             <div class="profile">
-                <div class="profile-age">20</div>
-                <div class="profile-location">Pune, Maharashtra</div>
-                <div class="profile-image"><img src="../../assets/images/img.jpg" alt="Sneha"></div>
+                <div class="profile-age">{{profile?.age}}</div>
+                <div class="profile-location">{{profile?.city}}</div>
+                <div class="profile-image"><img src="../../assets/images/{{profile?.profile}}.jpg" alt="Sneha"></div>
             </div >
             <div class="event">
-                <button mat-raised-button color="warn">Not Intrested</button>
-                <button mat-raised-button color="success">Not Intrested</button>
+                <button mat-raised-button color="warn" (click)="next()">Not Intrested</button>
+                <button mat-raised-button color="success" (click)="next()">Intrested</button>
             </div>
         </mat-card-content>
     </mat-card>
