--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,3 +1,8 @@
 <mat-toolbar>
     <a href="/"><img src="../../assets/images/logo.png" alt="soulful" class="brand"></a>
+    <div class="spacer"></div>
+   <div class="nav">
+     <a href="/login">LOGIN</a>
+        <a href="/signup">SIGNUP</a>
+   </div>
 </mat-toolbar>
