added delete method in the element

--- a/frontend/src/app/home/home.component.css
+++ b/frontend/src/app/home/home.component.css
@@ -13,6 +13,7 @@ mat-card{
     text-align: center;
     margin: auto;
     margin: 0 -30px;
+    transition: .2s;
 }
 mat-card-title{
     margin: 15px 0;
