--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="main">We've found perfect match for you !</div>
    <div class="profile-container">
          <mat-card *ngFor="let profile of profiles" id="{{profile?.profile}}-card">
-            <a href="" (mouseenter)="up(profile?.profile)" (mouseleave)="down(profile?.profile)" id="{{profile?.profile}}">
+            <a href="javascript:void(0)" (mouseenter)="up(profile?.profile)" (mouseleave)="down(profile?.profile)" id="{{profile?.profile}}">
             <mat-card-title>{{profile?.name}}</mat-card-title>
             <mat-card-content>
                 <div class="profile">
@@ -11,7 +11,7 @@
                     <div class="profile-image"><img src="../../assets/images/{{profile?.profile}}.jpg" alt="Sneha"></div>
                 </div >
                 <div class="event">
-                    <button mat-raised-button color="warn" (click)="next()">Not Intrested</button>
+                    <button mat-raised-button color="warn" (click)="remove(profile?.id)">Not Intrested</button>
                     <button mat-raised-button color="success" (click)="next()">Intrested</button>
                 </div>
             </mat-card-content>
