--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -6,12 +6,12 @@
             <mat-card-title>{{profile?.name}}</mat-card-title>
             <mat-card-content>
                 <div class="profile">
-                    <div class="profile-age">{{profile?.age}}</div>
-                    <div class="profile-location">{{profile?.city}}</div>
+                    <div class="profile-location"><i class="fa-solid fa-location-dot"></i>&nbsp;{{profile?.city}}</div>
+                    <div class="profile-age"><i class="fa-solid fa-cake-candles"></i>&nbsp;{{profile?.age}}</div>
                     <div class="profile-image"><img src="../../assets/images/{{profile?.profile}}.jpg" alt="Sneha"></div>
                 </div >
                 <div class="event">
-                    <button mat-raised-button color="warn" (click)="remove(profile?.id)">Not Intrested</button>
+                    <button mat-raised-button color="warn" (click)="remove(profile?.profile)">Not Intrested</button>
                     <button mat-raised-button color="success" (click)="next()">Intrested</button>
                 </div>
             </mat-card-content>
