--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -2,7 +2,8 @@
     <a href="/"><img src="../../assets/images/logo.png" alt="soulful" class="brand"></a>
     <div class="spacer"></div>
    <div class="nav">
+    <mat-icon class="icon">heart</mat-icon>
      <a href="/login">LOGIN</a>
-        <a href="/signup">SIGNUP</a>
+    <a href="/signup">SIGNUP</a>
    </div>
 </mat-toolbar>
