--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -2,8 +2,30 @@
     <a href="/"><img src="../../assets/images/logo.png" alt="soulful" class="brand"></a>
     <div class="spacer"></div>
    <div class="nav">
-    <mat-icon class="icon">heart</mat-icon>
-     <a href="/login">LOGIN</a>
-    <a href="/signup">SIGNUP</a>
+    <div class="user-controls">
+        <button mat-icon-button>
+        <mat-icon class="icon user-warn">favorite</mat-icon>
+        </button>
+        <button mat-icon-button>
+            <mat-icon matBadge="15" matBadgeColor="warn" class="user-warn">message</mat-icon>
+        </button>
+        <button mat-icon-button>
+            <mat-icon class="icon user-warn"  (click)="toggleMenu()">person</mat-icon>
+        </button>
+         <div class="dropdown" id="dropdown" style="display:none">
+           <div>
+             <a type="button" href="/login">
+                <mat-icon class="icon user-warn">logout</mat-icon> <span>Logout</span>
+             </a>
+           </div>
+            <div>
+                <a type="button">
+                    <mat-icon class="icon user-warn">settings</mat-icon> <span>Profile</span>
+                </a>
+            </div>
+        </div>
+    </div>
+     <!-- <a href="/login">LOGIN</a>
+    <a href="/signup">SIGNUP</a> -->
    </div>
 </mat-toolbar>
