changed login style

--- a/frontend/src/app/dashboard/login/login.component.css
+++ b/frontend/src/app/dashboard/login/login.component.css
@@ -3,6 +3,10 @@ mat-card{
     margin: auto;
     margin-top: 2rem;
     padding: 30px 20px;
+    border: 1px solid #81C6C1;
+}
+mat-card-title{
+    color: #81C6C1;
 }
 form{
     display: flex;
