fixed validations for all the elements

--- a/frontend/src/app/dashboard/signup/signup.component.html
+++ b/frontend/src/app/dashboard/signup/signup.component.html
@@ -4,28 +4,30 @@
             <form [formGroup]="customer" (submit)="saveCustomer(customer)">
                 <mat-form-field>
                     <mat-label>Name</mat-label>
-                    <input type="text" required matInput formControlName="customerName">
-                    <mat-error class="error" *ngIf="customer.controls['customerName'].hasError('required')">Name is required</mat-error>
+                    <input type="text" required matInput formControlName="name">
+                    <mat-error class="error" *ngIf="customer.controls['name'].hasError('required')">Name is required</mat-error>
                 </mat-form-field>
                 <mat-form-field>
                     <mat-label>Age</mat-label>
-                    <input type="number" required matInput formControlName="customerPhone" >
-                    <mat-error class="error" *ngIf="customer.controls['customerPhone'].hasError('required')">Contact is required</mat-error>
-                    <mat-error class="error" *ngIf="customer.controls['customerPhone'].hasError('pattern')">Valid contact number contains 10 digit starting with 7/8/9</mat-error>    
+                    <input type="number" required matInput formControlName="age" >
+                    <mat-error class="error" *ngIf="customer.controls['age'].hasError('required')">Age is required</mat-error>
+                    <mat-error class="error" *ngIf="customer.controls['age'].hasError('verifyAge')">Age must be 18 years and above</mat-error>
+
                 </mat-form-field>
-                <mat-radio-group aria-label="Select an option">
+                <mat-radio-group aria-label="Select an option" formControlName="gender">
                     <span>Gender: </span>
                     <mat-radio-button value="1">Male</mat-radio-button>
                     <mat-radio-button value="2">Female</mat-radio-button>
                 </mat-radio-group>
                 <mat-form-field>
                     <mat-label>City</mat-label>
-                    <input type="text" required matInput formControlName="email" required>
+                    <input type="text" required matInput formControlName="city" required>
+                    <mat-error class="error" *ngIf="customer.controls['city'].hasError('required')">City is required</mat-error>
                 </mat-form-field>
                 <mat-form-field>
                     <mat-label>Email</mat-label>
                     <input type="email" required matInput formControlName="email">
-                    <mat-error class="error" *ngIf="customer.controls['email'].hasError('required')">City is required</mat-error>
+                    <mat-error class="error" *ngIf="customer.controls['email'].hasError('required')">Email is required</mat-error>
                     <mat-error class="error" *ngIf="customer.controls['email'].hasError('pattern')"> Enter a valid email address</mat-error>    
                 </mat-form-field>
                 <mat-form-field>
