--- a/frontend/src/app/dashboard/login/login.component.html
+++ b/frontend/src/app/dashboard/login/login.component.html
@@ -1,7 +1,7 @@
 <mat-card>
     <mat-card-title>Login</mat-card-title>
     <mat-card-content>
-            <form [formGroup]="user">
+            <form [formGroup]="user" (submit)="login(user)">
                 <mat-form-field>
                     <mat-label>Email</mat-label>
                     <input type="email" required matInput formControlName="email" id="email">
