added logout button

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -14,7 +14,7 @@
         </button>
          <div class="dropdown" id="dropdown" style="display:none">
            <div>
-             <a type="button" href="/login">
+             <a type="button" (click)="logout();">
                 <mat-icon class="icon user-warn">logout</mat-icon> <span>Logout</span>
              </a>
            </div>
