fixed issue with signup data

--- a/frontend/src/app/dashboard/signup/signup.component.html
+++ b/frontend/src/app/dashboard/signup/signup.component.html
@@ -15,8 +15,8 @@
                 </mat-form-field>
                 <mat-radio-group aria-label="Select an option" formControlName="gender">
                     <span>Gender: </span>
-                    <mat-radio-button value="1">Male</mat-radio-button>
-                    <mat-radio-button value="2">Female</mat-radio-button>
+                    <mat-radio-button value="male">Male</mat-radio-button>
+                    <mat-radio-button value="female">Female</mat-radio-button>
                 </mat-radio-group>
                 <mat-form-field>
                     <mat-label>City</mat-label>
