added method to always check for login

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -12,7 +12,7 @@
                 </div >
                 <div class="event">
                     <button mat-raised-button color="warn" (click)="remove(profile?.profile)">Not Intrested</button>
-                    <button mat-raised-button color="success" (click)="liked(profile?.profile)">Intrested</button>
+                    <button mat-raised-button color="success" (click)="liked(profile?.profile, profile?.id)">Intrested</button>
                 </div>
             </mat-card-content>
             </a>
