--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -19,7 +19,7 @@
              </a>
            </div>
             <div>
-                <a type="button">
+                <a type="button" routerLink="/profile">
                     <mat-icon class="icon user-warn">settings</mat-icon> <span>Profile</span>
                 </a>
             </div>
