--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar>
-    <a href="/"><img src="../../assets/images/logo.png" alt="soulful" class="brand"></a>
+    <a href="/" *ngIf="! isUserLoggedIn()"><img src="../../assets/images/logo.png" alt="soulful" class="brand"></a>
+    <a href="home" *ngIf="isUserLoggedIn()"><img src="../../assets/images/logo.png" alt="soulful" class="brand"></a>
     <div class="spacer"></div>
    <div class="nav">
     <div class="user-controls" *ngIf="isUserLoggedIn()">
