fixed issue with displaying data

--- a/frontend/src/app/dashboard/profile/profile.component.html
+++ b/frontend/src/app/dashboard/profile/profile.component.html
@@ -17,7 +17,7 @@
                     </tr>
                     <tr *ngFor="let profile of profile">
                         <th>Gender: </th>
-                        <td>{{profile.gender}}</td>
+                        <td class="gender">{{profile.gender}}</td>
                     </tr>
                     <tr *ngFor="let profile of profile">
                         <th>City: </th>
